# firm

./: .gitattributes  .gitignore  .gitmodules  CHANGES.md  Cargo.toml  README.md  install.ps1  install.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pull_request.yml  release.yml
example/core/: channels.firm  industries.firm  main.firm  strategies.firm
example/network/: colleagues.firm
example/resources/branding/: assets.firm
example/resources/templates/proposal/: proposal_templates.firm  technical_retainer_proposal.typ
example/sales/: acme_corp.firm
examples/clients/: contacts.firm
examples/projects/: client_work.firm
examples/schemas/: custom_contact.firm
firm_cli/: Cargo.toml
firm_cli/examples/: profile.firm
firm_cli/examples/schemas/: custom_employee.firm  custom_project.firm
firm_cli/src/: cli.rs  errors.rs  files.rs  logging.rs  main.rs  query.rs  ui.rs
firm_cli/src/commands/: add.rs  build.rs  field_prompt.rs  get.rs  mod.rs
firm_core/: Cargo.toml
firm_core/src/: entity.rs  field.rs  id.rs  lib.rs
firm_core/src/graph/: graph_errors.rs  mod.rs  query.rs
firm_core/src/schema/: builtin.rs  mod.rs  validation.rs  validation_errors.rs
firm_lang/: Cargo.toml
firm_lang/examples/: profile.firm
firm_lang/examples/clients/: contacts.firm
firm_lang/examples/schemas/: custom_project.firm
firm_lang/src/: lib.rs
firm_lang/src/convert/: conversion_errors.rs  mod.rs  to_entity.rs  to_schema.rs
firm_lang/src/generate/: from_entity.rs  from_field.rs  from_value.rs  generator_options.rs  mod.rs
firm_lang/src/parser/: mod.rs  parsed_entity.rs  parsed_field.rs  parsed_schema.rs  parsed_schema_field.rs  parsed_source.rs  parsed_value.rs  parser_errors.rs  parser_utils.rs  source.rs
firm_lang/src/workspace/: build.rs  io.rs  mod.rs  workspace_errors.rs
firm_lang/tests/: convert_entity_tests.rs  convert_schema_tests.rs  parser_entity_tests.rs  parser_schema_tests.rs  parser_source_tests.rs  workspace_tests.rs
media/: demo.tape
