[package]
name = "firm_core"
version = "0.2.0"
edition = "2024"
description = "Core data structures and graph operations for Firm."
license = "AGPL-3.0"
repository = "https://github.com/42futures/firm"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
petgraph = { version = "0.8.2", features = ["serde-1"] }
log = "0.4.27"
rust_decimal = { version = "1.37.2", features = ["serde-with-str"] }
iso_currency = { version = "0.5.3", features = ["with-serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
convert_case = "0.8.0"

[dev-dependencies]
assert_matches = "1.5"
env_logger = "0.11.8"
